@@ -1,6 +1,7 @@
-2011-09-09  Valek Filippov
+2011-09-10  Valek Filippov
 
 		* Added '?a' and '?u' commands, chop spaces from '?x'.
+		* Improvements in search result display.
 
 2011-09-09  Valek Filippov
 
